# pexpect-serialspawn

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  codeql.yml
examples/: serial_interact.py
src/pexpect_serialspawn/: __init__.py  serial_spawn.py  stdin_helpers.py
